# VoxInk

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
tests/: test_converter.py
voxink/: __init__.py  aligner.py  cli.py  converter.py  ffmpeg_utils.py  separator.py  transcriber.py
